--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,3 +6,6 @@ jobs:
     steps:
       - run: node --version
       - run: npm --version
+      - uses: actions/checkout@v4
+      - run: npm install
+      - run: npm start
