--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,4 +8,5 @@ jobs:
       - run: npm --version
       - uses: actions/checkout@v4
       - run: npm install
+      - run: npm install -g nodemon
       - run: npm start
