--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,5 +8,5 @@ jobs:
       - run: npm --version
       - uses: actions/checkout@v4
       - run: npm install
-      - run: npm install -g nodemon
+      - run: npm install -g nodemon ts-node
       - run: npm start
