--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,5 +16,5 @@ jobs:
         with:
           image: jishnu79/typescript
           registry: docker.io
-          username: ${{secret.DOCKER_USERNAME}}
-          password: ${{secret.DOCKER_PASSWORD}}
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
